--- a/menu.html
+++ b/menu.html
@@ -985,7 +985,7 @@
 		const genericErrorHtml = '<div class="empty">Unable to load menu. Please check your internet connection or permissions and try again.</div>';
 		const brandNameFallback = "Menu";
 		const forkAndSpoonIcon = "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='14' fill='%23f97316'/%3E%3Cpath fill='%23ffffff' d='M22 10c-1.66 0-3 1.34-3 3v15c0 3.38 1.77 6.31 4.48 7.75V54c0 1.66 1.34 3 3 3h2c1.66 0 3-1.34 3-3V10h-3v13h-2V10zm18 0c-1.66 0-3 1.34-3 3v9c0 3.87 3.13 7 7 7h1v25c0 1.66 1.34 3 3 3h2c1.66 0 3-1.34 3-3V10z'/%3E%3C/svg%3E";
-		const normalizeVendorName = (name = "") => (name || "").trim().toLowerCase();
+		const normalizeVendorName = (name = "") => (name || "").trim().replace(/[‘’‛`´]/g, "'").toLowerCase();
 		const pickVariantPrice = (item, keys, fallback) => {
 			for (const key of keys) {
 				const raw = item?.[key];
@@ -1452,10 +1452,10 @@ card.className = "item-card";
 const img = document.createElement("img");
 img.className = "item-image";
 const imageSrc = item.image || item.imageURL || "https://via.placeholder.com/120x120?text=No+Image";
-const baseNeedsCustomization = Boolean(item.choices) || (Array.isArray(item.includes) && item.includes.length) || Boolean(item.time_window);
-const isLetsCafeBreakfast = isLetsCafeVendor && /breakfast set/i.test(item.name || "");
-const isLetsCafeCoffeeTea = isLetsCafeVendor && /coffee\/tea series/i.test(item.category || "");
-const isLetsCafeMatcha = isLetsCafeVendor && /matcha series/i.test(item.category || "");
+				const baseNeedsCustomization = Boolean(item.choices) || (Array.isArray(item.includes) && item.includes.length) || Boolean(item.time_window);
+				const isLetsCafeBreakfast = isLetsCafeVendor && /breakfast set/i.test(item.name || "");
+				const isLetsCafeCoffeeTea = isLetsCafeVendor && (/coffee\/tea series/i.test(item.category || "") || /coffee\/tea series/i.test(item.name || ""));
+				const isLetsCafeMatcha = isLetsCafeVendor && (/matcha series/i.test(item.category || "") || /matcha series/i.test(item.name || ""));
 const itemForNote = isLetsCafeBreakfast
 	? {
 		...item,
